# simpleLOMs

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml  release.yml
demos/: README.md  builder_purcell_readout.py  builder_two_qubit_bus.py  purcell_readout.ipynb
demos/figures/: purcell_chain.html
docs/: Makefile  api.rst  citation.rst  conf.py  index.rst  install.rst  release_logs.rst
docs/_build/html/: .buildinfo  (+8 more)
docs/_static/: custom.css
docs/tutorials/: 01_fit_lc_models.ipynb  02_ranking_and_loaded_shifts.ipynb  04_cpw_parameter_sweeps.ipynb  06_readout_parameters.ipynb  07_design_to_spec.ipynb  09_hybrid_series_hanger.ipynb
src/simpleLOMs/: __init__.py  analysis.py  elements.py  figure_graphs.py  params.py  plotting.py  readout.py  sweeps.py  system.py  utils.py
src/simpleLOMs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_tutorial_helpers.py
tutorials/: 02_ranking_and_loaded_shifts.ipynb  03_resonator_networks.ipynb  05_compare_to_simulations.ipynb  08_hanger_resonators.ipynb  _perf_fit_lom.py  _perf_fit_lom_final.txt  builder_01.py  builder_02.py  builder_03.py  builder_04.py  builder_05.py  builder_06.py  builder_07.py  builder_08.py  builder_09.py
tutorials/figures/: chain_cpw.html  chain_lc.html  cpw_7mm.html  fitted_lc.html  hybrid_cpw.html  hybrid_lc.html  tut02_loaded_topology.html
tutorials/results/: cc_sweep.json  cpw_7mm_cc100_hfss.s2p  cpw_7mm_cc20_50_hfss.s2p  cpw_7mm_cc50_100_hfss.s2p  cpw_7mm_ctog_hfss.s2p  cpw_7mm_hfss.s2p  fem_stand_in.s2p
(+77 files in other folders)
